<resources>
    <string name="app_name">Sceneary</string>
    <string name="title_activity_maps">Sceneary</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="filter_comedy">Comedy</string>
    <string name="filter_trivia">Trivia</string>
    <string name="filter_music">Music</string>
    <string name="filter_karaoke">Karaoke</string>
    <string name="facebook_app_id">1651597074914785</string>
    <string name="date_selected" />
    <string name="date_view_set">Date Selected:</string>
    <string name="date_label_set">View events for selected date:</string>
    <string name="date_button_set">Pick Date</string>
    <string name="update">Update Map</string>
    <string name="today">Today</string>
</resources>
