<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/filter_comedy"
        android:icon="@drawable/ic_filter_black_24dp"
        android:title="@string/filter_comedy"
        app:showAsAction="always" />
    <item
        android:id="@+id/filter_trivia"
        android:icon="@drawable/ic_filter_black_24dp"
        android:title="@string/filter_trivia"
        app:showAsAction="always" />
    <item
        android:id="@+id/filter_music"
        android:icon="@drawable/ic_filter_black_24dp"
        android:title="@string/filter_music"
        app:showAsAction="always" />
    <item
        android:id="@+id/filter_karaoke"
        android:icon="@drawable/ic_filter_black_24dp"
        android:title="@string/filter_karaoke"
        app:showAsAction="always" />

</menu>
